--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,13 @@
 
 
 <ag-grid-angular
-    style="width: 100%; height: 550px;"
+    style        ="width: 100%; height: 550px;"
     [rowData]    ="rowData()"
     [columnDefs] ="colDefs"
     (gridReady)  ="onGridReady($event)"
     [pagination] ="true"
+    [defaultColDef]="defaultColDef"
+    [theme]="myTheme"
 />
 
 <button (click)="resetFilterValues()" style="margin: 24px; background-color: red; padding: 6px 12px; border-radius: 6px;">
