add link to company

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,7 @@
     [theme]         ="theme"
 />
 
-<button (click)="resetFilterValues()" style="margin: 24px; background-color: red; padding: 6px 12px; border-radius: 6px;">
+<button (click)="resetFilterValues()" 
+    style="margin: 24px; background-color: red; padding: 6px 12px; border-radius: 6px;">
   Reset
 </button>
