--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,7 @@
     [pagination]    ="true"
     [defaultColDef] ="defaultColDef"
     [theme]         ="theme"
+    [sideBar]       ="sideBar"
 />
 
 <button (click)="resetFilterValues()" 
