--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 
 
 <ag-grid-angular
-    style           ="width: 100%; height: 550px;"
+    style           ="width: 100%; height: calc(100vh - 102px);"
     [rowData]       ="rowData()"
     [columnDefs]    ="colDefs"
     (gridReady)     ="onGridReady($event)"
